--- a/css/styles.css
+++ b/css/styles.css
@@ -11,7 +11,7 @@
     Gulp and send to the /css folder which is then loaded on the page.
 */
 body {
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'Montserrat', sans-serif !important;
     font-size: 16px
 }
 
