--- a/css/styles.css
+++ b/css/styles.css
@@ -10,6 +10,7 @@
     that don't come from third party libraries. This file gets compiled using
     Gulp and send to the /css folder which is then loaded on the page.
 */
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
 body {
     font-family: 'Montserrat', sans-serif !important;
     font-size: 16px
